<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fogra"
    android:padding="10dp"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/edit_text_show_digits"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="10dp"
        android:layout_marginTop="100dp"
        android:textColor="@color/magnolia"
        android:textSize="50sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <Button
        android:id="@+id/button_C"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_manatee_silver"
        android:text="@string/button_C"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_7"
        app:layout_constraintEnd_toStartOf="@id/button_brackets"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_brackets"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_manatee_silver"
        android:text="@string/button_brackets"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_8"
        app:layout_constraintEnd_toStartOf="@id/button_percent"
        app:layout_constraintStart_toEndOf="@id/button_C" />

    <Button
        android:id="@+id/button_percent"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_magnolia_silver"
        android:text="@string/button_percent"
        android:textColor="@color/celadon_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_9"
        app:layout_constraintEnd_toStartOf="@id/button_division"
        app:layout_constraintStart_toEndOf="@id/button_brackets" />

    <Button
        android:id="@+id/button_division"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_magnolia_silver"
        android:text="@string/button_division"
        android:textColor="@color/celadon_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_multiply"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_percent" />

    <Button
        android:id="@+id/button_7"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_7"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_4"
        app:layout_constraintEnd_toStartOf="@id/button_8"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_8"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_8"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_5"
        app:layout_constraintEnd_toStartOf="@id/button_9"
        app:layout_constraintStart_toEndOf="@id/button_7" />

    <Button
        android:id="@+id/button_9"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_9"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_6"
        app:layout_constraintEnd_toStartOf="@id/button_multiply"
        app:layout_constraintStart_toEndOf="@id/button_8" />

    <Button
        android:id="@+id/button_multiply"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_magnolia_silver"
        android:text="@string/button_multiply"
        android:textColor="@color/celadon_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_minus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_9" />

    <Button
        android:id="@+id/button_4"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_4"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_1"
        app:layout_constraintEnd_toStartOf="@id/button_5"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_5"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_2"
        app:layout_constraintEnd_toStartOf="@id/button_6"
        app:layout_constraintStart_toEndOf="@id/button_4" />

    <Button
        android:id="@+id/button_6"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_6"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_3"
        app:layout_constraintEnd_toStartOf="@id/button_minus"
        app:layout_constraintStart_toEndOf="@id/button_5" />

    <Button
        android:id="@+id/button_minus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_magnolia_silver"
        android:text="@string/button_minus"
        android:textColor="@color/celadon_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_plus"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_6" />

    <Button
        android:id="@+id/button_1"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_1"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_module"
        app:layout_constraintEnd_toStartOf="@id/button_2"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_2"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_0"
        app:layout_constraintEnd_toStartOf="@id/button_3"
        app:layout_constraintStart_toEndOf="@id/button_1" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_3"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_dot"
        app:layout_constraintEnd_toStartOf="@id/button_plus"
        app:layout_constraintStart_toEndOf="@id/button_2" />

    <Button
        android:id="@+id/button_plus"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_magnolia_silver"
        android:text="@string/button_plus"
        android:textColor="@color/celadon_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toTopOf="@id/button_equal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_3" />

    <Button
        android:id="@+id/button_module"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_module"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button_0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_0"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_dot"
        app:layout_constraintStart_toEndOf="@id/button_module" />

    <Button
        android:id="@+id/button_dot"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_forga_silver"
        android:text="@string/button_dot"
        android:textColor="@color/magnolia"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_equal"
        app:layout_constraintStart_toEndOf="@id/button_0" />

    <Button
        android:id="@+id/button_equal"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_margin="5dp"
        android:background="@drawable/button_magnolia_silver"
        android:text="@string/button_equal"
        android:textColor="@color/celadon_green"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/button_dot" />


</androidx.constraintlayout.widget.ConstraintLayout>